fix problems admin.py

--- a/core/templates/admin/payment_report.html
+++ b/core/templates/admin/payment_report.html
@@ -95,7 +95,7 @@
 
     <!-- 🔹 Botón volver -->
     <p>
-        <a href="{% url 'admin:app_list' app_label='your_app_name' %}" class="button">⬅️ Volver al Admin</a>
+        <a href="{% url 'admin:index' %}" class="button">⬅️ Volver al Admin</a>
     </p>
 </div>
 
