--- a/core/templates/admin/payment_report.html
+++ b/core/templates/admin/payment_report.html
@@ -109,5 +109,5 @@
 
 <!-- Chart.js y script externo -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="{% static 'js/payment_report.js' %}"></script>
+<script src="{% static 'core/js/payment_report.js' %}"></script>
 {% endblock %}
