fix problems payment_report.html

--- a/core/templates/admin/payment_report.html
+++ b/core/templates/admin/payment_report.html
@@ -101,10 +101,10 @@
 
 <!-- 🔹 Datos JSON para JS -->
 <script id="method-data" type="application/json">
-    {{ totals_by_method|safe }}
+    {{ totals_by_method_json|safe }}
 </script>
 <script id="status-data" type="application/json">
-    {{ totals_by_status|safe }}
+    {{ totals_by_status_json|safe }}
 </script>
 
 <!-- Chart.js y script externo -->
